chore(deps): upgrade django to 3.1.7 upgrade python to 3.9 and bump other dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,10 @@ env=
 filterwarnings =
     error::DeprecationWarning
     error::PendingDeprecationWarning
+    ignore:Using a non-boolean value for an isnull lookup is deprecated, use True or False instead.:django.utils.deprecation.RemovedInDjango40Warning
+    # following is needed beceause of https://github.com/mozilla/mozilla-django-oidc/pull/371
+    ignore:django.conf.urls.url().*:django.utils.deprecation.RemovedInDjango40Warning
+
 
 [coverage:run]
 source=.
