--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django==3.1.7
 # might remove this once we find out how the jsonapi extras_require work
 django-filter==2.4.0
 django-multiselectfield==0.1.12
+django-prometheus==2.1.0
 djangorestframework==3.12.4
 djangorestframework-jsonapi[django-filter]==3.1.0
 mozilla-django-oidc==1.2.4
