chore(deps): add template lint, remove from action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,8 @@ jobs:
 
     strategy:
       matrix:
-        target: [js, hbs]
+        # TODO add hbs
+        target: [js]
 
     steps:
       - uses: actions/checkout@v2
