--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "ember-simple-auth-oidc": "^2.0.0",
     "ember-site-tour": "^2.2.0",
     "ember-source": "~3.12.0",
+    "ember-template-lint": "^3.2.0",
     "ember-test-selectors": "^3.0.0",
     "ember-tether": "^1.0.0",
     "ember-truth-helpers": "^2.1.0",
