--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,9 @@ jobs:
         env:
           COVERAGE: true
 
-      - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./coverage/lcov.info
+
+        # TODO enable this again after flaky tests are added back
+#       - name: Upload coverage report to Codecov
+#         uses: codecov/codecov-action@v1
+#         with:
+#           file: ./coverage/lcov.info
