--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "ember-cli-sass": "^10.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "^2.1.0",
-    "ember-cli-uglify-es": "^1.0.4",
+    "ember-cli-uglify": "3.0.0",
     "ember-cli-update": "^0.47.1",
     "ember-component-css": "^0.6.9",
     "ember-composable-helpers": "^3.0.2",
