--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
   "name": "timed",
   "version": "2.1.3",
+  "private": true,
   "description": "A time tracking software written in Ember.js",
   "repository": "https://github.com/adfinis-sygroup/timed-frontend",
-  "author": "Adfinis AG <info@adfinis.com>",
   "license": "AGPL-3.0",
-  "private": true,
+  "author": "Adfinis AG <info@adfinis.com>",
   "directories": {
     "test": "tests"
   },
   "scripts": {
     "build": "ember build",
-    "start": "ember server --proxy http://localhost:8000",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "test": "ember test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "ember server --proxy http://localhost:8000",
+    "test": "ember test"
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
   },
+  "release": {
+    "extends": "@adfinis-sygroup/semantic-release-config"
+  },
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "^1.5.0",
     "@adfinis-sygroup/semantic-release-config": "^3.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@ember/optional-features": "^1.1.0",
+    "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
@@ -107,8 +111,5 @@
   },
   "ember": {
     "edition": "octane"
-  },
-  "release": {
-    "extends": "@adfinis-sygroup/semantic-release-config"
   }
 }
