--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 python-dateutil==2.8.1
 django==3.1.7
 # might remove this once we find out how the jsonapi extras_require work
+django-cors-headers==3.10.1
 django-filter==2.4.0
 django-multiselectfield==0.1.12
 django-prometheus==2.1.0
