--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
     "prepare": "husky install",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember server --proxy http://localhost:8000",
-    "test": "npm-run-all lint:* test:*",
+    "test": "npm-run-all lint test:*",
     "test:ember": "ember test"
   },
   "commitlint": {
@@ -31,53 +34,55 @@
     "@adfinis-sygroup/eslint-config": "^1.5.0",
     "@adfinis-sygroup/semantic-release-config": "^3.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@ember/optional-features": "^1.3.0",
-    "@glimmer/component": "^1.0.1",
-    "@glimmer/tracking": "^1.0.0",
+    "@ember/optional-features": "2.0.0",
+    "@ember/test-helpers": "2.4.2",
+    "@glimmer/component": "1.0.4",
+    "@glimmer/tracking": "1.0.4",
     "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
-    "babel-eslint": "^10.1.0",
+    "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.1.1",
-    "ember-auto-import": "^1.6.0",
-    "ember-basic-dropdown": "^2.0.11",
+    "ember-auto-import": "^1.11.3",
+    "ember-basic-dropdown": "3.1.0",
     "ember-can": "^2.1.0",
     "ember-changeset": "3.15.0",
     "ember-changeset-validations": "3.15.2",
-    "ember-cli": "~3.20.2",
-    "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.21.0",
-    "ember-cli-chart": "^3.6.0",
+    "ember-cli": "3.28.0",
+    "ember-cli-app-version": "^5.0.0",
+    "ember-cli-babel": "7.26.6",
+    "ember-cli-chart": "3.7.2",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.2.0",
-    "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-mirage": "^1.1.6",
+    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-mirage": "2.3.0",
     "ember-cli-moment-shim": "^3.8.0",
     "ember-cli-nouislider": "^1.1.0",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^10.0.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-test-loader": "^2.1.0",
+    "ember-cli-terser": "^4.0.2",
     "ember-cli-update": "^1.0.1",
     "ember-component-css": "^0.6.9",
     "ember-composable-helpers": "^3.0.2",
     "ember-concurrency": "^1.1.3",
-    "ember-data": "~3.20.0",
+    "ember-data": "3.28.0",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.1",
+    "ember-fetch": "^8.1.1",
     "ember-font-awesome": "^3.1.1",
-    "ember-load-initializers": "^2.1.1",
+    "ember-load-initializers": "^2.1.2",
     "ember-math-helpers": "^2.14.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.6.0",
     "ember-notify": "^6.0.0",
     "ember-pad": "^1.2.3",
+    "ember-page-title": "^6.2.2",
     "ember-parachute": "^1.0.2",
     "ember-power-calendar": "^0.13.3",
     "ember-power-calendar-moment": "^0.1.7",
-    "ember-power-select": "^2.3.4",
-    "ember-qunit": "^4.6.0",
+    "ember-power-select": "3.0.0",
+    "ember-qunit": "^5.1.4",
     "ember-resolver": "8.0.3",
     "ember-responsive": "^3.0.5",
     "ember-route-action-helper": "^2.0.7",
@@ -85,32 +90,33 @@
     "ember-simple-auth": "^2.1.1",
     "ember-simple-auth-oidc": "^2.0.0",
     "ember-site-tour": "^2.2.0",
-    "ember-source": "~3.20.2",
-    "ember-template-lint": "^3.2.0",
+    "ember-source": "3.28.0",
+    "ember-template-lint": "^3.6.0",
     "ember-test-selectors": "^3.0.0",
     "ember-tether": "^1.0.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-validated-form": "4.1.0",
     "ember-wormhole": "^0.5.5",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-ember": "^8.9.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ember": "^10.5.4",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-qunit": "^7.1.0",
     "faker": "^4.1.0",
     "husky": "^7.0.2",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "pagination-pager": "^3.2.0",
-    "prettier": "1.19.1",
-    "qunit-dom": "^1.2.0",
+    "prettier": "^2.3.2",
+    "qunit": "^2.16.0",
+    "qunit-dom": "^1.6.0",
     "sass": "^1.24.2",
     "typeface-source-sans-pro": "^0.0.75"
   },
   "engines": {
-    "node": ">= 14.17"
+    "node": ">= 14.17 || >= 16"
   },
   "ember": {
     "edition": "octane"
