--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "@ember/test-helpers": "2.4.2",
     "@glimmer/component": "1.0.4",
     "@glimmer/tracking": "1.0.4",
-    "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
+    "@html-next/vertical-collection": "3.0.0-0",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.1.1",
     "ember-auto-import": "^1.11.3",
-    "ember-basic-dropdown": "3.1.0",
+    "ember-basic-dropdown": "4.0.2",
     "ember-can": "^2.1.0",
     "ember-changeset": "3.15.0",
     "ember-changeset-validations": "3.15.2",
@@ -81,7 +81,7 @@
     "ember-parachute": "^1.0.2",
     "ember-power-calendar": "^0.13.3",
     "ember-power-calendar-moment": "^0.1.7",
-    "ember-power-select": "3.0.0",
+    "ember-power-select": "4.1.7",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "8.0.3",
     "ember-responsive": "^3.0.5",
@@ -116,7 +116,7 @@
     "typeface-source-sans-pro": "^0.0.75"
   },
   "engines": {
-    "node": "12.* || 14.* || >= 16"
+    "node": "14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
