chore(deps): update django to 3.2.13 update black and django-money

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ filterwarnings =
     ignore:Using a non-boolean value for an isnull lookup is deprecated, use True or False instead.:django.utils.deprecation.RemovedInDjango40Warning
     # following is needed beceause of https://github.com/mozilla/mozilla-django-oidc/pull/371
     ignore:django.conf.urls.url().*:django.utils.deprecation.RemovedInDjango40Warning
-
+    ignore:.*is deprecated in favour of new moneyed.l10n.format_money.*
 
 [coverage:run]
 source=.
