--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "ember-ajax": "^5.1.1",
     "ember-auto-import": "^1.11.3",
     "ember-basic-dropdown": "4.0.2",
-    "ember-can": "^2.1.0",
+    "ember-can": "4.1.0",
     "ember-changeset": "3.15.0",
     "ember-changeset-validations": "3.15.2",
     "ember-cli": "3.28.0",
@@ -66,7 +66,7 @@
     "ember-cli-update": "^1.0.1",
     "ember-component-css": "^0.6.9",
     "ember-composable-helpers": "^3.0.2",
-    "ember-concurrency": "^1.1.3",
+    "ember-concurrency": "2.2.1",
     "ember-data": "3.28.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
