--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "^1.5.0",
     "@adfinis-sygroup/semantic-release-config": "^3.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.18.6",
     "@ember/optional-features": "2.0.0",
     "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.4.2",
@@ -51,7 +51,7 @@
     "ember-changeset-validations": "3.15.2",
     "ember-cli": "3.28.0",
     "ember-cli-app-version": "^5.0.0",
-    "ember-cli-babel": "7.26.6",
+    "ember-cli-babel": "7.26.11",
     "ember-cli-chart": "3.7.2",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -121,5 +121,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "resolutions": {
+    "ember-concurrency": ">=2.0.0"
   }
 }
