--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,9 @@ name: Release Container Image
 on:
   pull_request:
   push:
-    branches: main
+    branches:
+      - main
+      - master
     tags:
       - 'v*.*.*'
 
