--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "^1.5.0",
     "@adfinis-sygroup/semantic-release-config": "^3.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.18.6",
+    "@babel/helper-simple-access": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.18.9",
     "@ember/optional-features": "2.0.0",
     "@ember/render-modifiers": "2.0.4",
-    "@ember/test-helpers": "2.4.2",
-    "@glimmer/component": "1.0.4",
-    "@glimmer/tracking": "1.0.4",
+    "@ember/test-helpers": "2.8.1",
+    "@glimmer/component": "1.1.2",
+    "@glimmer/tracking": "1.1.2",
     "@html-next/vertical-collection": "3.0.0-0",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "^3.0.0",
@@ -73,10 +74,10 @@
     "ember-fetch": "^8.1.1",
     "ember-font-awesome": "^3.1.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-math-helpers": "^2.14.0",
+    "ember-math-helpers": "^2.18.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^7.6.0",
-    "ember-notify": "^6.0.0",
+    "ember-notify": "^6.0.3",
     "ember-pad": "^1.2.3",
     "ember-page-title": "^6.2.2",
     "ember-parachute": "^1.0.2",
@@ -99,21 +100,21 @@
     "ember-validated-form": "4.1.0",
     "ember-wormhole": "^0.5.5",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^10.5.4",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ember": "^10.6.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-qunit": "^7.1.0",
+    "eslint-plugin-qunit": "^7.3.1",
     "faker": "^4.1.0",
     "husky": "^7.0.2",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "pagination-pager": "^3.2.0",
-    "prettier": "^2.3.2",
-    "qunit": "^2.16.0",
+    "prettier": "^2.7.1",
+    "qunit": "^2.19.1",
     "qunit-dom": "^1.6.0",
-    "sass": "^1.24.2",
+    "sass": "^1.53.0",
     "typeface-source-sans-pro": "^0.0.75"
   },
   "engines": {
@@ -124,5 +125,6 @@
   },
   "resolutions": {
     "ember-concurrency": ">=2.0.0"
-  }
+  },
+  "dependencies": {}
 }
