--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ember-cli-chart": "3.7.2",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-deprecation-workflow": "^2.1.0",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-mirage": "2.3.0",
