--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@adfinis-sygroup/semantic-release-config": "^3.2.0",
     "@babel/helper-simple-access": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "7.18.9",
-    "@ember/optional-features": "2.0.0",
+    "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.8.1",
     "@glimmer/component": "1.1.2",
