--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ whitenoise = "^6.2.0"
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
 coverage = "6.4.1"
+django-extensions = "3.2.1"
 factory-boy = "3.2.1"
 flake8 = "4.0.1"
 flake8-blind-except = "0.2.1"
