--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
       "@commitlint/config-conventional"
     ]
   },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.hbs": "ember-template-lint --fix",
+    "*.{scss,graphql,json,md,yml}": "prettier --write"
+  },
   "release": {
     "extends": "@adfinis-sygroup/semantic-release-config"
   },
@@ -35,6 +40,8 @@
     "@adfinis-sygroup/semantic-release-config": "^3.2.0",
     "@babel/helper-simple-access": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "7.18.9",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.8.1",
@@ -109,6 +116,7 @@
     "eslint-plugin-qunit": "^7.3.1",
     "faker": "^4.1.0",
     "husky": "^7.0.2",
+    "lint-staged": "^13.0.3",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "pagination-pager": "^3.2.0",
