--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
       "@commitlint/config-conventional"
     ]
   },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.hbs": "ember-template-lint --fix",
+    "*.{scss,graphql,json,md,yml}": "prettier --write"
+  },
   "release": {
     "extends": "@adfinis-sygroup/semantic-release-config"
   },
@@ -39,6 +44,8 @@
     "@glimmer/component": "1.0.4",
     "@glimmer/tracking": "1.0.4",
     "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
@@ -106,6 +113,7 @@
     "eslint-plugin-qunit": "^7.1.0",
     "faker": "^4.1.0",
     "husky": "^7.0.2",
+    "lint-staged": "^13.0.3",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "pagination-pager": "^3.2.0",
