--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "^1.5.0",
     "@adfinis-sygroup/semantic-release-config": "^3.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/helper-simple-access": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.18.9",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
-    "@ember/optional-features": "2.0.0",
+    "@ember/jquery": "^2.0.0",
+    "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.8.1",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
@@ -50,7 +53,7 @@
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.1.2",
-    "ember-auto-import": "^1.11.3",
+    "ember-auto-import": "^2.4.2",
     "ember-basic-dropdown": "6.0.1",
     "ember-can": "^2.1.0",
     "ember-changeset": "3.15.0",
@@ -69,13 +72,13 @@
     "ember-cli-moment-shim": "^3.8.0",
     "ember-cli-nouislider": "^1.1.0",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-sass": "^10.0.0",
+    "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-cli-update": "^1.0.1",
-    "ember-component-css": "^0.6.9",
-    "ember-composable-helpers": "^3.0.2",
-    "ember-concurrency": "^1.1.3",
+    "ember-component-css": "^0.8.1",
+    "ember-composable-helpers": "^5.0.0",
+    "ember-concurrency": "2.2.1",
     "ember-data": "3.28.0",
     "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
@@ -124,7 +127,8 @@
     "qunit": "^2.19.3",
     "qunit-dom": "^1.6.0",
     "sass": "^1.55.0",
-    "typeface-source-sans-pro": "^0.0.75"
+    "typeface-source-sans-pro": "^0.0.75",
+    "webpack": "5"
   },
   "engines": {
     "node": ">= 14.17 || >= 16"
