--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@fontsource/source-sans-pro": "^4.5.11",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
-    "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
+    "@html-next/vertical-collection": "4.0.0",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
