--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "ember-simple-auth-oidc": "^2.0.0",
     "ember-site-tour": "^2.2.0",
     "ember-source": "3.28.0",
-    "ember-template-lint": "^3.6.0",
+    "ember-template-lint": "^4.15.0",
     "ember-test-selectors": "^6.0.0",
     "ember-tether": "^2.0.1",
     "ember-truth-helpers": "^3.1.1",
@@ -130,7 +130,7 @@
     "webpack": "5"
   },
   "engines": {
-    "node": ">= 14.17 || >= 16"
+    "node": " ^14.17.0 || >= 16"
   },
   "ember": {
     "edition": "octane"
