--- a/package.json
+++ b/package.json
@@ -85,9 +85,9 @@
     "ember-fetch": "^8.1.2",
     "ember-font-awesome": "^3.1.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-math-helpers": "^2.14.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-moment": "^7.6.0",
+    "ember-math-helpers": "^2.18.2",
+    "ember-maybe-import-regenerator": "^1.0.0",
+    "ember-moment": "9.0.1",
     "ember-notify": "^6.0.3",
     "ember-pad": "^1.2.3",
     "ember-page-title": "^6.2.2",
