--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.1.2",
-    "ember-auto-import": "^2.4.2",
+    "ember-auto-import": "^2.4.3",
     "ember-basic-dropdown": "6.0.1",
-    "ember-can": "^2.1.0",
-    "ember-changeset": "3.15.0",
-    "ember-changeset-validations": "3.15.2",
     "ember-classic-decorator": "^3.0.1",
+    "ember-can": "4.2.0",
+    "ember-changeset": "4.1.1",
+    "ember-changeset-validations": "4.1.0",
     "ember-cli": "3.28.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "7.26.11",
@@ -104,11 +104,11 @@
     "ember-simple-auth-oidc": "3.0.0",
     "ember-site-tour": "^2.2.0",
     "ember-source": "3.28.0",
-    "ember-template-lint": "^4.15.0",
+    "ember-template-lint": "^4.16.1",
     "ember-test-selectors": "^6.0.0",
     "ember-tether": "^2.0.1",
     "ember-truth-helpers": "^3.1.1",
-    "ember-validated-form": "4.1.0",
+    "ember-validated-form": "6.1.2",
     "ember-wormhole": "^0.6.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
