--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
     "qunit": "^2.19.3",
     "qunit-dom": "^2.0.0",
     "sass": "^1.55.0",
+    "tracked-built-ins": "^3.1.0",
+    "tracked-toolbox": "^2.0.0",
     "webpack": "5.74.0"
   },
   "engines": {
