--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - master
+      # TODO: delete when upgrade is done
+      - ember-octane
 
 env:
   NODE_VERSION: 12
