--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       args:
-        REQUIREMENTS: requirements-dev.txt
+        INSTALL_DEV_DEPENDENCIES: "true"
     depends_on:
       - mailhog
     environment:
@@ -14,7 +14,7 @@ services:
       - DJANGO_OIDC_USERNAME_CLAIM=preferred_username
     volumes:
       - ./:/app
-    command: /bin/sh -c "wait-for-it.sh -t 60 db:5432 -- ./manage.py migrate && ./manage.py runserver 0.0.0.0:80"
+    command: /bin/sh -c "wait-for-it.sh -t 60 db:5432 -- poetry run python manage.py migrate && poetry run python manage.py runserver 0.0.0.0:80"
     networks:
       - timed.local
 
