--- a/.dockerignore
+++ b/.dockerignore
@@ -6,6 +6,7 @@ Dockerfile
 .dockerignore
 .env
 .git
+.github
 *.pyc
 __pycache__
 *.pyd
@@ -14,3 +15,4 @@ __pycache__
 .Python
 .python-version
 *.swp
+.venv
