--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "@adfinis-sygroup/eslint-config": "^1.5.0",
     "@adfinis-sygroup/semantic-release-config": "^3.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@ember/optional-features": "2.0.0",
     "@ember/test-helpers": "2.4.2",
     "@glimmer/component": "1.0.4",
     "@glimmer/tracking": "1.0.4",
     "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
@@ -55,6 +55,7 @@
     "ember-can": "^2.1.0",
     "ember-changeset": "3.15.0",
     "ember-changeset-validations": "3.15.2",
+    "ember-classic-decorator": "^3.0.1",
     "ember-cli": "3.28.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "7.26.6",
@@ -75,6 +76,7 @@
     "ember-composable-helpers": "^3.0.2",
     "ember-concurrency": "^1.1.3",
     "ember-data": "3.28.0",
+    "ember-decorators": "^6.1.1",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-font-awesome": "^3.1.1",
