--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,7 +14,9 @@ services:
       - DJANGO_OIDC_USERNAME_CLAIM=preferred_username
     volumes:
       - ./:/app
-    command: /bin/sh -c "wait-for-it.sh -t 60 db:5432 -- poetry run python manage.py migrate && poetry run python manage.py runserver 0.0.0.0:80"
+    command: /bin/sh cmd.sh --autoreload --static
+    ports:
+      - "81:81"
     networks:
       - timed.local
 
