--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,8 @@ django-environ = "^0.8.1"
 django-money = "^2.1.1"
 python-redmine = "^2.3.0"
 sentry-sdk = "^1.9.5"
-gunicorn = "^20.1.0"
 whitenoise = "^6.2.0"
+django-hurricane = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
