--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@ember/optional-features": "2.0.0",
     "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.8.1",
+    "@embroider/macros": "^1.9.0",
     "@fontsource/source-sans-pro": "4.5.11",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
+    "@glint/template": ">= 0.8.3",
     "@html-next/vertical-collection": "4.0.0",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
@@ -78,7 +80,7 @@
     "ember-cli-update": "1.0.1",
     "ember-component-css": "0.8.1",
     "ember-composable-helpers": "5.0.0",
-    "ember-concurrency": "2.2.1",
+    "ember-concurrency": "2.3.4",
     "ember-data": "3.28.0",
     "ember-decorators": "6.1.1",
     "ember-export-application-global": "2.0.1",
@@ -97,6 +99,7 @@
     "ember-power-select": "6.0.1",
     "ember-qunit": "6.0.0",
     "ember-resolver": "8.0.3",
+    "ember-resources": "5.6.0",
     "ember-responsive": "5.0.0",
     "ember-route-action-helper": "2.0.8",
     "ember-scrollable": "1.0.2",
