--- a/package.json
+++ b/package.json
@@ -45,12 +45,11 @@
     "@ember/optional-features": "2.0.0",
     "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.8.1",
-    "@embroider/macros": "^1.10.0",
+    "@embroider/macros": "^1.9.0",
     "@embroider/util": "^1.9.0",
     "@fontsource/source-sans-pro": "4.5.11",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
-    "@glint/template": ">= 0.8.3",
     "@html-next/vertical-collection": "4.0.2",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
@@ -148,6 +147,7 @@
     "peerDependencyRules": {
       "ignoreMissing": [
         "@babel/core",
+        "@glint/template@",
         "@types/node"
       ]
     }
