--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "ember-cli-babel": "7.26.11",
     "ember-cli-chart": "3.7.2",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
-    "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-deprecation-workflow": "^2.1.0",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
@@ -135,5 +134,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "resolutions": {
+    "@embroider/macros": "^0.50.0"
   }
 }
