refactor(task-selection): rework optimized power select
Triage of task-selection, optimized power select and tracking service
where overhauled.

--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "peerDependencyRules": {
       "ignoreMissing": [
         "@babel/core",
-        "@glint/template@",
+        "@glint/template",
         "@types/node"
       ]
     }
