refactor(task-selection): rework optimized power select
Triage of task-selection, optimized power select and tracking service
where overhauled.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@ember/optional-features": "2.0.0",
     "@ember/render-modifiers": "2.0.4",
     "@ember/test-helpers": "2.8.1",
-    "@embroider/macros": "^1.9.0",
+    "@embroider/macros": "^1.10.0",
+    "@embroider/util": "^1.9.0",
     "@fontsource/source-sans-pro": "4.5.11",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
