chore(deps): upgrade ember-simple-auth-oidc

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "1.5.0",
     "@adfinis-sygroup/semantic-release-config": "3.4.0",
+    "@apollo/client": "3.7.1",
     "@commitlint/cli": "17.2.0",
     "@commitlint/config-conventional": "17.2.0",
     "@ember/jquery": "2.0.0",
@@ -104,8 +105,8 @@
     "ember-responsive": "5.0.0",
     "ember-route-action-helper": "2.0.8",
     "ember-scrollable": "1.0.2",
-    "ember-simple-auth": "3.1.0",
-    "ember-simple-auth-oidc": "3.0.0",
+    "ember-simple-auth": "4.2.2",
+    "ember-simple-auth-oidc": "5.0.1",
     "ember-site-tour": "2.2.0",
     "ember-source": "3.28.0",
     "ember-template-lint": "4.17.0",
@@ -122,6 +123,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-qunit": "7.3.1",
     "faker": "4.1.0",
+    "graphql": "16.6.0",
     "husky": "7.0.4",
     "lint-staged": "13.0.3",
     "loader.js": "4.7.0",
