--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,13 +11,22 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7.17.1
+
       - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+          cache: "pnpm"
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: Release on NPM
-        run: yarn semantic-release
+        run: pnpm semantic-release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
