--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "devDependencies": {
     "@adfinis-sygroup/eslint-config": "1.5.0",
     "@adfinis-sygroup/semantic-release-config": "3.4.0",
-    "@babel/core": "^7.0.0",
     "@commitlint/cli": "17.2.0",
     "@commitlint/config-conventional": "17.2.0",
     "@ember/jquery": "2.0.0",
@@ -50,7 +49,6 @@
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
     "@html-next/vertical-collection": "4.0.0",
-    "@types/node": "*",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
     "downloadjs": "1.4.7",
@@ -66,9 +64,9 @@
     "ember-cli-babel": "7.26.11",
     "ember-cli-chart": "3.7.2",
     "ember-cli-code-coverage": "1.0.3",
-    "ember-cli-dependency-lint": "^2.0.1",
+    "ember-cli-dependency-lint": "2.0.1",
     "ember-cli-deprecation-workflow": "2.1.0",
-    "ember-cli-htmlbars": "^6.0.0",
+    "ember-cli-htmlbars": "6.0.0",
     "ember-cli-inject-live-reload": "2.1.0",
     "ember-cli-mirage": "2.4.0",
     "ember-cli-moment-shim": "3.8.0",
@@ -139,15 +137,15 @@
   "ember": {
     "edition": "octane"
   },
-  "peerDependencies": {
-    "@babel/core": "^7.0.0",
-    "@glint/template": ">= 0.8.3",
-    "@types/node": "*",
-    "ember-cli-htmlbars": "^6.0.0"
-  },
   "pnpm": {
     "overrides": {
       "ember-concurrency": "^2.1.1"
+    },
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@babel/core",
+        "@types/node"
+      ]
     }
   }
 }
