--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "ember-sinon-qunit": "^6.0.0",
     "ember-site-tour": "2.2.0",
     "ember-source": "3.28.0",
+    "ember-style-modifier": "^1.0.0",
     "ember-template-lint": "4.17.0",
     "ember-test-selectors": "6.0.0",
     "ember-tether": "2.0.1",
