ci: enable hbs linting

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        # TODO add hbs
-        target: [js]
+        target: [js, hbs]
 
     steps:
       - uses: actions/checkout@v3
