chore: separate lint and test scripts
When running 'pnpm test' it would run the linting script before starting
the actual test script. Since it is already definded as an explicit job
to run in the CI, combining those would just bloat the testing time for
CI runs. It's also not very effective for local testing.

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "lint:js:fix": "eslint --config .eslintrc.js . --fix",
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
-    "lint:js:fix": "eslint . --fix",
     "start": "ember server --proxy http://localhost:8000",
-    "test": "npm-run-all lint test:*",
+    "test": "npm-run-all test:*",
     "test:ember": "ember test"
   },
   "commitlint": {
