chore(font-awesome): migrate to maintained fa package

--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "@embroider/macros": "^1.9.0",
     "@embroider/util": "^1.9.0",
     "@fontsource/source-sans-pro": "4.5.11",
+    "@fortawesome/ember-fontawesome": "^0.4.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
     "@html-next/vertical-collection": "4.0.2",
@@ -86,7 +90,6 @@
     "ember-event-helpers": "^0.1.1",
     "ember-export-application-global": "2.0.1",
     "ember-fetch": "8.1.2",
-    "ember-font-awesome": "3.1.1",
     "ember-load-initializers": "2.1.2",
     "ember-math-helpers": "2.18.2",
     "ember-maybe-import-regenerator": "1.0.0",
