--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,57 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base"],
+  "packageRules": [
+    {
+      "packageNames": [
+        "@embroider/macros",
+        "@embroider/util",
+        "@ember/test-helpers",
+        "broccoli-asset-rev",
+        "ember-auto-import",
+        "ember-cli",
+        "ember-data",
+        "ember-export-application-global",
+        "ember-load-initializers",
+        "ember-maybe-import-regenerator",
+        "ember-qunit",
+        "ember-resolver",
+        "ember-source",
+        "ember-try",
+        "eslint",
+        "eslint-plugin-ember",
+        "eslint-plugin-node",
+        "faker",
+        "loader.js",
+        "qunit",
+        "qunit-dom",
+        "webpack"
+      ],
+      "groupName": "ember infrastructure",
+      "groupSlug": "ember-infra",
+      "automerge": false
+    },
+    {
+      "matchPackagePatterns": ["ember-cli-S+"],
+      "groupName": "ember-cli-plugins"
+    },
+    {
+      "packageNames": [
+        "@adfinis-sygroup/eslint-config",
+        "@adfinis-sygroup/semantic-release-config",
+        "@commitlint/cli",
+        "@commitlint/config-conventional",
+        "husky",
+        "lint-staged",
+        "npm-run-all",
+        "prettier",
+        "sass"
+      ],
+      "groupName": "tooling"
+    }
+  ],
+  "automerge": true,
+  "major": {
+    "automerge": false
+  }
 }
