chore: use correct frontend image reference
We moved docker image hosting from dockerhub to github container
registry (ghcr.io)

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,7 +21,7 @@ services:
       - timed.local
 
   frontend:
-    image: adfinissygroup/timed-frontend:latest
+    image: ghcr.io/adfinis/timed-frontend:latest
     ports:
       - 4200:80
     environment:
