--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -1,10 +1,6 @@
 name: Release ghcr image
 
-on:
-  push:
-    branches: master
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+.*"
+on: workflow_dispatch
 
 jobs:
   container:
