ci(test): run tests workflow on push to beta

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,12 @@ name: Test
 on:
   push:
     branches:
+      - beta
       - main
       - renovate/**
   pull_request:
     branches:
+      - beta
       - main
 
 env:
