refactor: replace ember-site-tour > ember-shepherd

--- a/package.json
+++ b/package.json
@@ -111,10 +111,10 @@
     "ember-responsive": "5.0.0",
     "ember-route-action-helper": "2.0.8",
     "ember-scrollable": "1.0.2",
+    "ember-shepherd": "^14.0.2",
     "ember-simple-auth": "4.2.2",
     "ember-simple-auth-oidc": "5.1.0",
     "ember-sinon-qunit": "^6.0.0",
-    "ember-site-tour": "2.2.0",
     "ember-source": "3.28.11",
     "ember-style-modifier": "^1.0.0",
     "ember-template-lint": "4.17.0",
@@ -140,7 +140,8 @@
     "qunit": "2.19.4",
     "qunit-dom": "2.0.0",
     "sass": "1.58.3",
-    "semantic-release": "^21.0.7",
+    "semantic-release": "21.0.7",
+    "shepherd.js": "^11.1.1",
     "tracked-built-ins": "3.1.1",
     "tracked-toolbox": "2.0.0",
     "webpack": "5.76.2"
