fix(ember-cli-nouislider): prevent global usage of Logger
The logger was exported of the global Ember object which is
no longer available as of ember v4. Therefor we may use the
forked version of the addon. Replace addon completely in the
near future or upgrade original repository.

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "ember-cli-inject-live-reload": "2.1.0",
     "ember-cli-mirage": "2.4.0",
     "ember-cli-moment-shim": "3.8.0",
-    "ember-cli-nouislider": "1.2.1",
+    "ember-cli-nouislider": "derrabauke/ember-cli-nouislider#cf0d87986cf25d5795e1edd6c8b9f008c5b39872",
     "ember-cli-sass": "11.0.1",
     "ember-cli-sri": "2.1.1",
     "ember-cli-terser": "4.0.2",
