chore: ember 4.4 upgrade (#1067)
* chore: upgrade to ember 4.4

BREAKING CHANGE: Requires node >= 16.

* chore: remove custom unique-id helper

It's included now in ember by default.

* chore(deps): use optional features package for jquery

* use optional-features package
* remove route-action-helper addon

* fix: replace ember-scrollable with simplebar

* fix(index-reports-route): add missing notification service

* fix(ember-cli-nouislider): prevent global usage of Logger

The logger was exported of the global Ember object which is
no longer available as of ember v4. Therefor we may use the
forked version of the addon. Replace addon completely in the
near future or upgrade original repository.

* refactor(unverfified-reports): prevent global ember object usage

* refactor(worktime-balance-chart): to glimmer component

* fix(page-ability): safe property access

* refactor(worktime-balance-chart): adapt integration test

* fix(user-edit-credits): do not assert default query params

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "ember-changeset": "4.1.2",
     "ember-changeset-validations": "4.1.1",
     "ember-classic-decorator": "3.0.1",
-    "ember-cli": "3.28.6",
+    "ember-cli": "4.4.1",
     "ember-cli-app-version": "6.0.1",
     "ember-cli-babel": "7.26.11",
     "ember-cli-chart": "3.7.2",
@@ -81,7 +81,7 @@
     "ember-cli-inject-live-reload": "2.1.0",
     "ember-cli-mirage": "2.4.0",
     "ember-cli-moment-shim": "3.8.0",
-    "ember-cli-nouislider": "1.2.1",
+    "ember-cli-nouislider": "derrabauke/ember-cli-nouislider#cf0d87986cf25d5795e1edd6c8b9f008c5b39872",
     "ember-cli-sass": "11.0.1",
     "ember-cli-sri": "2.1.1",
     "ember-cli-terser": "4.0.2",
@@ -89,14 +89,13 @@
     "ember-component-css": "0.8.1",
     "ember-composable-helpers": "5.0.0",
     "ember-concurrency": "2.3.4",
-    "ember-data": "3.28.13",
+    "ember-data": "4.4.0",
     "ember-decorators": "6.1.1",
     "ember-event-helpers": "^0.1.1",
     "ember-export-application-global": "2.0.1",
     "ember-fetch": "8.1.2",
     "ember-load-initializers": "2.1.2",
     "ember-math-helpers": "2.18.2",
-    "ember-maybe-import-regenerator": "1.0.0",
     "ember-moment": "9.0.1",
     "ember-notify": "6.0.3",
     "ember-pad": "1.2.3",
@@ -108,13 +107,11 @@
     "ember-resolver": "8.0.3",
     "ember-resources": "5.6.2",
     "ember-responsive": "5.0.0",
-    "ember-route-action-helper": "2.0.8",
-    "ember-scrollable": "1.0.2",
     "ember-shepherd": "^14.0.2",
     "ember-simple-auth": "4.2.2",
     "ember-simple-auth-oidc": "5.1.0",
     "ember-sinon-qunit": "^6.0.0",
-    "ember-source": "3.28.11",
+    "ember-source": "4.4.0",
     "ember-style-modifier": "^1.0.0",
     "ember-template-lint": "4.17.0",
     "ember-test-selectors": "6.0.0",
@@ -139,9 +136,11 @@
     "prettier": "2.8.8",
     "qunit": "2.19.4",
     "qunit-dom": "2.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "1.58.3",
     "semantic-release": "21.0.7",
     "shepherd.js": "^11.1.1",
+    "simplebar": "^6.2.5",
     "tracked-built-ins": "3.1.1",
     "tracked-toolbox": "2.0.0",
     "webpack": "5.76.2"
@@ -161,6 +160,9 @@
         "@babel/core",
         "@glint/template",
         "@types/node"
+      ],
+      "allowAny": [
+        "marked"
       ]
     }
   }
